use Java14 "records" preview feature