@@ -7,7 +7,7 @@ plugins {
 version = "0.0.1-SNAPSHOT"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_13
+    sourceCompatibility = JavaVersion.VERSION_14
 }
 
 repositories {
@@ -26,9 +26,13 @@ test {
     useJUnitPlatform()
 }
 
-compileJava {
+tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
     options.fork = true
     options.deprecation = true
-    options.compilerArgs += ["-Xlint:unchecked", "-Xlint:deprecation"]
+    options.compilerArgs += ["-Xlint:unchecked", "-Xlint:deprecation", "--enable-preview", "-Xlint:preview"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += ["--enable-preview"]
 }
